--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "less-middleware": "1.0.x",
     "lodash": "^2.4.1",
     "morgan": "~1.0.0",
-    "static-favicon": "~1.0.0"
+    "static-favicon": "~1.0.0",
+    "superagent": "^0.18.0"
   }
 }
