--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "async": "^0.9.0",
@@ -16,6 +16,7 @@
     "less-middleware": "1.0.x",
     "lodash": "^2.4.1",
     "morgan": "~1.0.0",
+    "nodemon": "^1.2.0",
     "static-favicon": "~1.0.0",
     "superagent": "^0.18.0"
   }
