--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-resource": "~1.2.16",
     "jquery": "~2.1.1",
     "angular-route": "~1.2.16",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "moment": "~2.6.0"
   }
 }
